premiers ecrn application flutter + changemetn dans les models go
